# Batterpy

./: Battery-Check.ps1  README.md  __main__.py  nuitka_compile.ps1  pyinstaller_compile.ps1  pyproject.toml
batterpy/: calculations.py  display_functions.py  graph_generator.py  report_generator.py
