[tool.poetry]
name = "batterpy"
version = "0.1.0"
description = ""
authors = ["Aareon Sullivan <askully@amazon.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
WMI = "^1.5.1"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
nuitka = "^2.3.3"
pyinstaller = "^6.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
